overflow fix

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -66,7 +66,6 @@
     grid-template-columns: 1fr;
   }
   .markdown-content {
-    display: grid;
     order: -1;
     @media (max-width: $md-screen-size) {
       order: 1;
@@ -144,6 +143,7 @@
 
 .main-content table {
   margin: 1rem auto;
+  max-width: calc(100vw - 2rem);
 }
 
 .page-snippet table {
